Fixed: Letter Spacing Default

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,8 @@
 /* body {
     overflow-x: hidden;
 } */
+
+#__next > section {
+    width: 100%;
+    overflow-x: hidden;
+}
